Fixes warnings.